@@ -1,3 +1,10 @@
+2002-11-14  David O'Brien  <obrien@FreeBSD.org>
+
+	Merge from mainline:
+	2002-11-12  Thomas Moestl <tmm@FreeBSD.org>
+	* elf64-sparc.c (sparc64_elf_adjust_dynamic_symbol): Correct
+	references to large plt symbols.
+
 2002-11-13  Alan Modra  <amodra@bigpond.net.au>
 
 	Merge from mainline.
